--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,22 @@ p, .nav-link, .navbar-brand {
 .no-records {
     display: none;
 }
+.loader {
+  width : 80px;
+  height: 80px;
+  border: 16px solid white;
+  border-top:16px solid #BADA55;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.spin {
+  animation: spinner 1.5s linear infinite;
+}
+
+@keyframes spinner {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
