--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,14 @@ p {
     text-align: right;
     font-weight: bold;
 }
+#cricketTeamBoard i {
+    float: right;
+}
+#cricketTeamBoard th {
+    cursor: pointer;
+}
 @keyframes spinner {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
 
